user update endpoint is documented properly and updated to disallow certain fields like password or email
