# src/routers/user.js
@@ -8,14 +8,11 @@ const EmailToken = require('../mongo/model/emailToken');
 const cache = require('../middleware/cache')
 const constants = require("../data/constants");
 
-
 router.post('/users/signup', async (req, res) => {
     /*
         #swagger.tags = ['User']
         #swagger.description = 'Endpoint for a user to signup'
-    */
 
-    /*
         #swagger.parameters['email'] = {
             in: 'body',
             description: 'User email',
@@ -25,9 +22,7 @@ router.post('/users/signup', async (req, res) => {
                 example: 'antonio@gmail.com'
             }
          }
-    */
 
-    /*
         #swagger.parameters['password'] = {
             in: 'body',
             description: 'User password',
@@ -37,9 +32,7 @@ router.post('/users/signup', async (req, res) => {
                 example: 'password'
             }
         }
-    */
 
-    /*
         #swagger.responses[201] = {
             schema: {
                 "id" : 1234,
@@ -47,78 +40,78 @@ router.post('/users/signup', async (req, res) => {
             }
         }
     */
-    try{
+    try {
         const user = new User(req.body);
         await user.save();
         await user.generateAuthToken();
         user.sendEmailVerification(req);
-        
+
         return res.status(201).send('A verification email has been sent to ' + user.email + '. It will be expire after one day. If you not get verification email, use "resend" endpoint. Check API documentation for endpoint details.');
-    }
-    catch (e){
+    } catch (e) {
         res.status(406).send(e + "");
     }
 });
-router.get('/users/confirmation/:email/:token', async(req, res) => {
-    EmailToken.findOne({ token: req.params.token }, function (err, token) {
+router.get('/users/confirmation/:email/:token', async (req, res) => {
+    EmailToken.findOne({token: req.params.token}, function (err, token) {
         // token is not found into database i.e. token may have expired 
-        if (!token){
+        if (!token) {
             return res.status(400).send('Your verification link may have expired. Please use "resend" endpoint to resend the verification link. Check API documentation for endpoint details.');
         }
         // if token is found then check valid user 
-        else{
-            User.findOne({ _id: token._userId, email: req.params.email }, function (err, user) {
-                if (err){
+        else {
+            User.findOne({_id: token._userId, email: req.params.email}, function (err, user) {
+                if (err) {
                     return res.status(500).send(err.message);
                 }
                 // not valid user
-                if (!user){
+                if (!user) {
                     return res.status(401).send('We were unable to find a user for this verification. Please SignUp!');
-                } 
+                }
                 // user is already verified
-                else if (user.isVerified){
+                else if (user.isVerified) {
                     return res.status(200).send('User has been already verified. Please Login');
                 }
                 // verify user
-                else{
+                else {
                     // change isVerified to true
                     user.isVerified = true;
                     user.save(function (err) {
                         // error occur
-                        if(err){
+                        if (err) {
                             return res.status(500).send(err.message);
                         }
                         // account successfully verified
-                        else{
-                          return res.status(200).send('Your account has been successfully verified');
+                        else {
+                            return res.status(200).send('Your account has been successfully verified');
                         }
                     });
                 }
             });
         }
-        
+
     });
 });
 
 router.post('/users/confirmation/resend', async (req, res) => {
-    User.findOne({ email: req.body.email }, function (err, user) {
+    User.findOne({email: req.body.email}, function (err, user) {
         // user is not found into database
-        if (!user){
-            return res.status(400).send({msg:'We were unable to find a user with that email. Make sure your Email is correct!'});
+        if (!user) {
+            return res.status(400).send({msg: 'We were unable to find a user with that email. Make sure your Email is correct!'});
         }
         // user has been already verified
-        else if (user.isVerified){
+        else if (user.isVerified) {
             return res.status(200).send('This account has been already verified. Please log in.');
-    
-        } 
+
+        }
         // send verification link
-        else{
+        else {
             // generate token and save
             user.sendEmailVerification(req);
             return res.status(201).send('A verification email has been sent to ' + user.email + '. It will be expire after one day. If you not get verification email, use "resend" endpoint. Check API documentation for endpoint details.');
         }
     });
 });
+
 router.post('/users/login', async (req, res) => {
     /*
     #swagger.tags = ['User']
@@ -130,7 +123,7 @@ router.post('/users/login', async (req, res) => {
         required: true,
         type: 'string',
         schema: {
-            example: 'antonio@gmail.com'
+            "email": "antonio@gmail.com"
         }
      }
 
@@ -140,7 +133,7 @@ router.post('/users/login', async (req, res) => {
         required: true,
         type: 'string',
         schema: {
-            example: 'password'
+            "password": "example"
         }
     }
 
@@ -166,22 +159,187 @@ router.post('/users/login', async (req, res) => {
     }
 });
 
-router.post('/users/updateinfo', auth, async (req, res) => {
+// TODO test
+router.get('/users', auth, async (req, res) => {
     /*
-          #swagger.tags = ['User']
-          #swagger.description = 'Endpoint to update the user info'
+    #swagger.tags = ['User']
+    #swagger.description = 'Endpoint to get available information related to the user'
+
+    #swagger.responses[200] = {
+        schema: {
+            "allergies": [
+                "pepper",
+                "salt"
+            ],
+            "isVerified": true,
+            "likedRecipes": [],
+            "dislikedRecipes": [],
+            "_id": "606db95f4aba966eccd85648",
+            "email": "perman.atayev17@gmail.com",
+            "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MDZkYjk1ZjRhYmE5NjZlY2NkODU2NDgiLCJpYXQiOjE2MTc4MDM2MTUsImV4cCI6MTYxNzgwNzIxNX0.9hbXeasTPBVvqhaz9AdYZBdZ4HR1vODjlx3ks7Y1nmU",
+            "preferences": {
+                "calRange": [
+                    1,
+                    10
+                ],
+                "protRange": [],
+                "costRange": [],
+                "dietType": [],
+                "cookingTime": [],
+                "restrictions": [],
+                "_id": "606dbf8426bac5635c7bd255",
+                "mealsPerDay": 10,
+                "difficulty": "ExtraHard"
+            }
+        }
+    }
+
+        #swagger.responses[401] = {
+            schema: {
+                "error": "Please authenticate"
+            }
+        }
+
+     */
+    try {
+        const user = await User.find({_id: req.user._id});
+        res.status(200).send(user);
+    } catch (e) {
+        res.status(400).send("Bad request");
+    }
+})
+
+// TODO check how do we disallow updating the id of preferences object of user
+router.patch('/users', auth, async (req, res) => {
+    /*
+        #swagger.tags = ['User']
+        #swagger.description = 'Endpoint to update the user info that includes: username, age, gender, height, allergies, preferences'
+
+        #swagger.parameters["username"] = {
+            in: 'body',
+            description: 'Users username',
+            required: false,
+            type: 'string',
+            schema: {
+                "username": "boss"
+            }
+        }
+
+        #swagger.parameters["age"] = {
+            in: 'body',
+            description: 'User age',
+            required: false,
+            type: 'number',
+            schema: {
+                "age": 20
+            }
+        }
+
+        #swagger.parameters["height"] = {
+            in: 'body',
+            description: 'User height in meters',
+            required: false,
+            type: 'number',
+            schema: {
+                "height": 1.85
+            }
+        }
+
+        #swagger.parameters["allergies"] = {
+            in: 'body',
+            description: 'Users allergies. This value will overwrite the old allergies value of the user',
+            required: false,
+            type: 'array',
+            items: {
+                'type' : 'string'
+            },
+            schema: {
+                "allergies": ["pepper", "salt"]
+            }
+        }
+
+        #swagger.parameters["preferences"] = {
+            in: 'body',
+            description: 'Users preferences update in the signup or anytime afterwards. Following fields can be added / updated: calRange, protRange, costRange, dietType, \
+            cookingTime, restrictions, mealsPerDay, difficulty',
+            required: false,
+            type: 'JSON object',
+            schema: {
+                "preferences" : {
+                    "mealsPerDay" : 10,
+                    "calRange" : [1, 10],
+                    "difficulty" : "ExtraHard"
+                }
+            }
+        }
+
+        #swagger.parameters["gender"] = {
+            in: 'body',
+            description: 'Users gender which can be: male, female, other',
+            required: false,
+            type: 'string',
+            schema: {
+                "gender": "female"
+            }
+        }
+
+        #swagger.responses[201] = {
+            schema: {
+                "allergies": [
+                    "pepper",
+                    "salt"
+                ],
+                "isVerified": true,
+                "likedRecipes": [],
+                "dislikedRecipes": [],
+                "_id": "606db95f4aba966eccd85648",
+                "email": "perman.atayev17@gmail.com",
+                "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MDZkYjk1ZjRhYmE5NjZlY2NkODU2NDgiLCJpYXQiOjE2MTc4MDM2MTUsImV4cCI6MTYxNzgwNzIxNX0.9hbXeasTPBVvqhaz9AdYZBdZ4HR1vODjlx3ks7Y1nmU",
+                "preferences": {
+                    "calRange": [
+                        1,
+                        10
+                    ],
+                    "protRange": [],
+                    "costRange": [],
+                    "dietType": [],
+                    "cookingTime": [],
+                    "restrictions": [],
+                    "_id": "606dbf8426bac5635c7bd255",
+                    "mealsPerDay": 10,
+                    "difficulty": "ExtraHard"
+                }
+            }
+         }
+
+         #swagger.responses[400] = {
+            schema: {
+                "text": "Error: Field email is not allowed to be updated or does not exist"
+            }
+         }
     */
     const updates = Object.keys(req.body);
 
+    const fieldsAllowedToBeUpdated = ["allergies", "username", "age", "gender", "height", "preferences"];
+
     try {
         const user = req.user;
+        // check whether all updates are allowed.
+        updates.forEach((update) => {
+            if (!fieldsAllowedToBeUpdated.includes(update)) {
+                throw(new Error(`Field ${update} is not allowed to be updated or does not exist`));
+            }
+        })
+
         updates.forEach((update) => {
             user[update] = req.body[update];
-        })
+        });
+
         await user.save();
         return res.status(201).send(user);
+
     } catch (error) {
-        return res.status(400).send(error);
+        return res.status(400).send(error + "");
     }
 })
 
